# test-collatz-conjecture-with-yarp-gmm

code/: CMakeLists.txt
code/client/: CMakeLists.txt  cClient_main.cpp  collatzClient.cpp  collatzClient.h
code/server/: CMakeLists.txt  cServer_main.cpp  collatzServer.cpp  collatzServer.h  collatzThreads.cpp  collatzThreads.h
